// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.hwsec;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/hwsec";

// OwnershipService provides functions to clear ownership on devices.
service OwnershipService {
	rpc EnsureTPMIsReset(google.protobuf.Empty) returns (google.protobuf.Empty) {}
	rpc EnsureTPMAndSystemStateAreReset(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
